feat: add others backgrounds

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="app">
 
-<div class="videoContain">
-    <video>
-        <source src="./video/rain.mp4" type="video/mp4">
-    </video>
-</div>
+        <div class="videoContain">
+            <video loop="loop">
+                <source src="./video/rain.mp4" type="video/mp4">
+            </video>
+        </div>
 
 
         <div class="timeSelect">
@@ -37,7 +37,7 @@
                 xmlns="http://www.w3.org/2000/svg">
                 <circle cx="226.5" cy="226.5" r="216.5" stroke="#018EBA" stroke-width="20" />
             </svg>
-            
+
             <h3 class="timeDisplay">0:00</h3>
 
         </div>
@@ -46,6 +46,10 @@
             </button>
             <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/beach.svg"
                     alt="beach"> </button>
+            <button data-sound="./sounds/forest.mp3" data-video="./video/forest.mp4"><img src="./svg/forest.svg"
+                    alt="forest"> </button>
+            <button data-sound="./sounds/star.mp3" data-video="./video/star.mp4"><img src="./svg/star.svg"
+                    alt="star"> </button>
         </div>
     </div>
 
